logs/dxpy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/dxpy'...
Listing './lib/python3.5/site-packages/dxpy/bindings'...
Listing './lib/python3.5/site-packages/dxpy/cli'...
Listing './lib/python3.5/site-packages/dxpy/packages'...
Listing './lib/python3.5/site-packages/dxpy/packages/argcomplete'...
Compiling './lib/python3.5/site-packages/dxpy/packages/shlex.py'...
***   File "./lib/python3.5/site-packages/dxpy/packages/shlex.py", line 57
    print 'shlex: reading from %s, line %d' \
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dxpy/scripts'...
Compiling './lib/python3.5/site-packages/dxpy/ssh_tunnel_app_support.py'...
***   File "./lib/python3.5/site-packages/dxpy/ssh_tunnel_app_support.py", line 127
    print 'A web browser should have opened to connect you to your notebook.'
                                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dxpy/templating'...
Listing './lib/python3.5/site-packages/dxpy/templating/templates'...
Listing './lib/python3.5/site-packages/dxpy/templating/templates/bash'...
Listing './lib/python3.5/site-packages/dxpy/templating/templates/bash/basic'...
Listing './lib/python3.5/site-packages/dxpy/templating/templates/bash/basic/src'...
Listing './lib/python3.5/site-packages/dxpy/templating/templates/bash/parallelized'...
Listing './lib/python3.5/site-packages/dxpy/templating/templates/bash/parallelized/src'...
Listing './lib/python3.5/site-packages/dxpy/templating/templates/bash/scatter-process-gather'...
Listing './lib/python3.5/site-packages/dxpy/templating/templates/bash/scatter-process-gather/src'...
Listing './lib/python3.5/site-packages/dxpy/templating/templates/python'...
Listing './lib/python3.5/site-packages/dxpy/templating/templates/python/basic'...
Listing './lib/python3.5/site-packages/dxpy/templating/templates/python/basic/src'...
Compiling './lib/python3.5/site-packages/dxpy/templating/templates/python/basic/src/code.py'...
*** Sorry: IndentationError: expected an indented block (code.py, line 19)
Listing './lib/python3.5/site-packages/dxpy/templating/templates/python/basic/test'...
Compiling './lib/python3.5/site-packages/dxpy/templating/templates/python/basic/test/test.py'...
***   File "./lib/python3.5/site-packages/dxpy/templating/templates/python/basic/test/test.py", line 38
    print "Error removing %s during cleanup; ignoring." % (cls.applet_id,)
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dxpy/templating/templates/python/parallelized'...
Listing './lib/python3.5/site-packages/dxpy/templating/templates/python/parallelized/src'...
Compiling './lib/python3.5/site-packages/dxpy/templating/templates/python/parallelized/src/code.py'...
***   File "./lib/python3.5/site-packages/dxpy/templating/templates/python/parallelized/src/code.py", line 38
    print input1
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dxpy/templating/templates/python/parallelized/test'...
Compiling './lib/python3.5/site-packages/dxpy/templating/templates/python/parallelized/test/test.py'...
***   File "./lib/python3.5/site-packages/dxpy/templating/templates/python/parallelized/test/test.py", line 38
    print "Error removing %s during cleanup; ignoring." % (cls.applet_id,)
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dxpy/templating/templates/python/scatter-process-gather'...
Listing './lib/python3.5/site-packages/dxpy/templating/templates/python/scatter-process-gather/src'...
Compiling './lib/python3.5/site-packages/dxpy/templating/templates/python/scatter-process-gather/src/code.py'...
***   File "./lib/python3.5/site-packages/dxpy/templating/templates/python/scatter-process-gather/src/code.py", line 70
    print item
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dxpy/templating/templates/python/scatter-process-gather/test'...
Compiling './lib/python3.5/site-packages/dxpy/templating/templates/python/scatter-process-gather/test/test.py'...
***   File "./lib/python3.5/site-packages/dxpy/templating/templates/python/scatter-process-gather/test/test.py", line 38
    print "Error removing %s during cleanup; ignoring." % (cls.applet_id,)
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dxpy/utils'...
Listing './lib/python3.5/site-packages/dxpy-0.240.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil-3.3.0.egg-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.3.dist-info'...
Listing './lib/python3.5/site-packages/python_magic-0.4.6.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.7.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/ws4py'...
Listing './lib/python3.5/site-packages/ws4py/client'...
Listing './lib/python3.5/site-packages/ws4py/server'...
Listing './lib/python3.5/site-packages/ws4py-0.3.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
